* small refactorings